<resources>
    <string name="app_name">My Application</string>
    <string name="logo_text">Калькулятор</string>
    <string name="enter2">Введите второе число</string>

    <string name="enter">Введите первое число</string>
    <string name="name">Name</string>

    <string name="BigTextWelcomePage1">Мероприятия на любой вкус</string>
    <string name="SmallTextWelcomePage1">Спектакли, концерты, мюзиклы, выставки, экскурсии, балет и многое другое</string>
    <string name="NextWelcomePage1">Далее</string>

    <string name="BigTextWelcomePage2">Бесплатное и простое бронирование</string>
    <string name="SmallTextWelcomePage2">Оформить бронирование можно меньше, чем за минуту, а это ещё и бесплатно!</string>
    <string name="NextWelcomePage2">Далее</string>

    <string name="BigTextWelcomePage3">Покупка без сервисного сбора</string>
    <string name="SmallTextWelcomePage3">Билеты доступны без сервисного сбора для ещё большей экономии!</string>
    <string name="NextWelcomePage3">Далее</string>


    <string name="BigTextWelcomePage4">Кем вы являетесь, пользуясь приложением?</string>
    <string name="NextWelcomePage4">Далее</string>

    <string name="NextWelcomePage5Byer">Я - Покупатель</string>
    <string name="NextWelcomePage5Org">Я - Организатор</string>

    <string name="BigTextWelcomePage6">Осталось только выбрать город</string>

    <string name="NextWelcomePage7VRN">Воронеж</string>
    <string name="NextWelcomePage7MSK">Москва</string>
    <string name="NextWelcomePage7SPB">Санкт-Петербург</string>
    <string name="NextWelcomePage7">Выбрать</string>

    <string name="EnterUp">Войти</string>
    <string name="Register">Зарегистрироваться</string>
    <string name="Avtorize">Войти</string>

    <string name="RegistrationUp">Регистрация</string>

    <string name="RegistrationSurname">Фамилия</string>

    <string name="RegistrationName">Имя</string>

    <string name="RegistrationLogin">Логин</string>

    <string name="RegistrationEmail">Email</string>

    <string name="RegistrationPhone">Номер  телефона</string>

    <string name="RegistrationPassword">Пароль</string>

    <string name="RegistrationPasswordRepeat">Подтверждение пароля</string>

    <string name="Error">Ой, ошибочка вышла! Некорректно введены данные</string>

    <string name="ButtonBack">Назад</string>

    <string name="ConnectToManage">Ваша заявка на рассмотрении! В ближайшее время с Вами свяжется наш менеджер</string>

    <string name="AvtorizationUp">Авторизация</string>

    <string name="Login">Логин</string>

    <string name="ForgotPassword">Забыли пароль</string>

    <string name="ErrorNoLogin">Ой, ошибочка вышла! Не найдено аккаунта с таким логином</string>

    <string name="ErrorUncorrectPassword">Ой, ошибочка вышла!
Возможно Вы:
 1) Некорректно ввели логин или пароль
2) Ваш аккаунт находится на стадии рассмотрения</string>

    <string name="RepeatPassword">Попробовать еще раз</string>
    <string name="RecoverPassword">Восстановить пароль</string>
    <string name="RecoverPasswordUp">Восстановление пароля</string>
    <string name="Recover">Восстановить</string>
    <string name="favorite">Избранное</string>


</resources>