<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ByerRegister.ui.login.RegisterOrg">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="443dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@color/backgroud"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-32dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/RegistrationUp"
            android:textColor="#000"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/surname"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:background="@color/grey"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/RegistrationSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />


    <EditText
        android:id="@+id/name"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:background="@color/grey"

        android:inputType="textPersonName"
        android:hint="@string/RegistrationName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:hint="@string/RegistrationEmail"
        android:background="@color/grey"

        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:hint="@string/RegistrationPhone"
        android:background="@color/grey"

        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:hint="@string/RegistrationPassword"
        android:background="@color/grey"

        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:background="@color/grey"

        android:hint="@string/RegistrationPasswordRepeat"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"

        android:background="@drawable/myutton"
        android:focusable="auto"
        android:hint="@string/Register"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>