<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    tools:context=".WelcomePage.WelcomePage7ChooseCity">


    <Button
        android:id="@+id/button4"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/mybutton1"

        android:hint="@string/NextWelcomePage7VRN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="57dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/myutton"
        android:hint="@string/NextWelcomePage7"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/mybutton1"

        android:hint="@string/NextWelcomePage7MSK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:layout_marginTop="284dp"
        android:background="@drawable/mybutton1"

        android:hint="@string/NextWelcomePage7SPB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>