<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Organization.ui.login.AvtorizeOrg">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="443dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@color/backgroud"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-32dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/AvtorizationUp"
            android:textColorHint="@color/white"
            android:textColor="#000"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/Login"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_marginTop="112dp"
        android:background="@color/grey"

        android:ems="10"
        android:hint="@string/Login"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:background="@color/grey"

        android:ems="10"
        android:hint="@string/RegistrationPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <Button
        android:id="@+id/button7"
        android:layout_width="162dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="344dp"

        android:background="?android:attr/selectableItemBackground"
        android:hint="@string/ForgotPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"

        android:background="@drawable/myutton"
        android:focusable="auto"
        android:hint="@string/EnterUp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>