<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Organization.ui.login.Error.ErrorUncorrectPassword"
    android:background="@color/backgroud">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="275dp"
        android:layout_height="344dp"
        android:layout_marginTop="48dp"
        android:hint="@string/ErrorUncorrectPassword"
        android:textColorHint="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RepeatPassword"
        android:layout_width="242dp"
        android:layout_height="51dp"
        android:layout_marginTop="104dp"

        android:background="@drawable/myutton"
        android:hint="@string/RepeatPassword"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/RecoverPassword"
        android:layout_width="242dp"
        android:layout_height="51dp"
        android:layout_marginTop="172dp"

        android:background="@drawable/myutton"
        android:hint="@string/RecoverPassword"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>