<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseRegOrAvt">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="443dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@color/backgroud"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-32dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/EnterUp"
            android:textColorHint="@color/white"
            android:textColor="#000"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/avtorize"
        android:layout_width="195dp"
        android:layout_height="38dp"
        android:layout_marginTop="300dp"
        android:hint="@string/Avtorize"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="195dp"
        android:layout_height="38dp"
        android:layout_marginTop="228dp"

        android:hint="@string/Register"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>