<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Organization.ui.login.RecoverPasswordOrg">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="443dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@color/backgroud"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-32dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/RecoverPasswordUp"
            android:textColorHint="@color/white"
            android:textColor="#000"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_marginTop="112dp"
        android:background="@color/grey"

        android:ems="10"
        android:hint="@string/RegistrationEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"

        android:background="@drawable/myutton"
        android:hint="@string/Recover"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>