<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"

    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="118dp"
        android:layout_marginTop="204dp"
        android:fontFamily="sans-serif"
        android:hint="@string/BigTextWelcomePage1"
        android:textColorHint="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="348dp"
        android:layout_height="93dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif"
        android:hint="@string/SmallTextWelcomePage1"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="57dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/NextWelcomePage1"
        android:textColorHint="@color/white"
        android:background="@drawable/myutton"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="159dp"
        android:layout_height="175dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ticketease_sjr_0b_k8_transformed" />

</androidx.constraintlayout.widget.ConstraintLayout>